@@ -20,7 +20,7 @@ import re
 from resources.lib import utils
 from resources.lib.decrypters.kvsplayer import kvs_decode
 from resources.lib.adultsite import AdultSite
-from random import randint
+import time
 
 site = AdultSite('vipporns', '[COLOR hotpink]VIP Porns[/COLOR]', 'https://www.vipporns.com/', 'vipporns.png', 'vipporns')
 
@@ -28,7 +28,7 @@ site = AdultSite('vipporns', '[COLOR hotpink]VIP Porns[/COLOR]', 'https://www.vi
 @site.register(default_mode=True)
 def Main():
     site.add_dir('[COLOR hotpink]Categories[/COLOR]', site.url + 'categories/', 'Cat', site.img_cat)
-    site.add_dir('[COLOR hotpink]Search[/COLOR]', site.url + 'search/', 'Search', site.img_search)
+    site.add_dir('[COLOR hotpink]Search[/COLOR]', site.url + 'vp-search/', 'Search', site.img_search)
     List(site.url + 'new-porn-video/')
     utils.eod()
 
@@ -44,14 +44,12 @@ def List(url):
         name = utils.cleantext(name.strip())
         site.add_download_link(name, videopage, 'Playvid', img, name, duration=duration)
 
-    match = re.search(r'class="load-more".+?data-block-id="([^"]+)".+?data-parameters="([^"]+)">Load', listhtml, re.DOTALL | re.IGNORECASE)
+    match = re.search(r'class="next">.+?data-block-id="([^"]+)" data-parameters="([^"]+)"', listhtml, re.DOTALL | re.IGNORECASE)
     if match:
         block_id = match.group(1)
         params = match.group(2).replace(';', '&').replace(':', '=')
         npage = params.split('=')[-1]
-        rnd = 1000000000000 + randint(0, 999999999999)
-        nurl = url.split('?')[0] + '?mode=async&function=get_block&block_id={0}&{1}&_={2}'.format(block_id, params, str(rnd))
-
+        nurl = url.split('?')[0] + '?mode=async&function=get_block&block_id={0}&{1}&_={2}'.format(block_id, params, int(time.time() * 1000))
         nurl = nurl.replace('+from_albums', '')
         site.add_dir('[COLOR hotpink]Next Page...[/COLOR] (' + npage + ')', nurl, 'List', site.img_next)
 
@@ -60,12 +58,11 @@ def List(url):
 
 @site.register()
 def Search(url, keyword=None):
-    searchUrl = url
     if not keyword:
         site.search_dir(url, 'Search')
     else:
-        title = keyword.replace(' ', '+')
-        searchUrl = "{0}{1}/".format(searchUrl, title)
+        title = keyword.replace(' ', '-')
+        searchUrl = "{0}{1}/".format(url, title)
         List(searchUrl)
 
 
